# BetAML

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION.md  EXECUTIVE_SUMMARY.md  FILE_INDEX.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  Makefile  README (1).md  README.md  SUMMARY.md  coverage-readiness.xml  docs_ARCHITECTURE.md  docs_DEPLOYMENT.md  docs_DSL_GUIDE.md  infra_clickhouse-init.sql  infra_docker-compose.yml  infra_init-db.sql  libs_dsl_parser.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  services_api_main.py  services_api_requirements.txt  services_ml_service_main.py  services_ml_service_requirements.txt  services_rules_engine_main.py  services_rules_engine_requirements.txt  services_stream_processor_main.py
datasets/: sanctions_sample.csv
docs/: MODULE_COMPLETION_REPORT.md  aml-scorecard.md  analyst-guide.md  audit-2026-03-17.md  auditoria-consolidada-pld-2026-03-20.md  branch-protection.md  contributing.md  dependency-map-runtime.md  go-live-checklist.md  implementation-report-2026-03-17.md  ingest-contract.md  mapping-config-example.yaml  ml-trainer-implementation.md  openapi-tags.md  openapi.json  ops-guide.md  product-readiness-backlog.md  (+8 more)
libs/: __init__.py  clients.py  connectors.py  dsl_parser.py  mapping.py  ml_governance.py  models.py  pyproject.toml  requirements.txt  schemas.py  telemetry.py
libs/clients/: clickhouse_client.py  kafka_client.py  redis_client.py  s3_client.py
libs/dsl/: parser.py
libs/schemas/: canonical.py  workflow.py
libs/transforms/: mapping.py
(+606 files in other folders)
